implemented wikis basics

--- a/EqUiWebUi/App_Code/MyHtmlHelpers.cshtml
+++ b/EqUiWebUi/App_Code/MyHtmlHelpers.cshtml
@@ -13,7 +13,7 @@
                         @*show helplink only if there is one*@
                         @if (helpurl != "")
                         {
-                            <a href=""><i class="fas fa-question-circle" onclick="window.open('@helpurl', 'EQUI', 'window settings')"></i></a>
+                            <i class="fas fa-question-circle text-primary" onclick="window.open('@helpurl', 'EQUI', 'window settings')"></i>
                         }
                     </div>
                     @*show collapes helper tooltip only if there is helpertext*@
