--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -15,9 +15,9 @@
         </h5>
     </div>
     <div class="card-body">
-        @MyHtmlHelpers.EquiLink("/Gadata/Table/PloegRapportWebgrid", "fa-list-alt", EqUiWebUi.defaultArea.ShiftReport, helperText: EqUiWebUi.defaultArea.ShiftReportDescription)
-        @MyHtmlHelpers.EquiLink("/Gadata/Table/SupervisieWebgrid", "fa-list-alt", EqUiWebUi.defaultArea.Supervision, helperText: EqUiWebUi.defaultArea.SupervisionDescription)
-        @MyHtmlHelpers.EquiLink("/Alert/Alert/Index", "fas fa-bell", EqUiWebUi.defaultArea.Alerts, helperText: EqUiWebUi.defaultArea.AlertsDescription, iconClasses: "bg-warning")
+        @MyHtmlHelpers.EquiLink("/Gadata/Table/PloegRapportWebgrid", "fa-list-alt", EqUiWebUi.defaultArea.ShiftReport, helperText: EqUiWebUi.defaultArea.ShiftReportDescription, helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 1 }, null))
+        @MyHtmlHelpers.EquiLink("/Gadata/Table/SupervisieWebgrid", "fa-list-alt", EqUiWebUi.defaultArea.Supervision, helperText: EqUiWebUi.defaultArea.SupervisionDescription, helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 2 }, null))
+        @MyHtmlHelpers.EquiLink("/Alert/Alert/Index", "fas fa-bell", EqUiWebUi.defaultArea.Alerts, helperText: EqUiWebUi.defaultArea.AlertsDescription, iconClasses: "bg-warning", helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 3 }, null))
         @MyHtmlHelpers.EquiLink("/Home/Rendersite?url=" + @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet"), "far fa-object-group", "Supervisie (brownfield)", helperText: "Satline supervisie schermen")
         @MyHtmlHelpers.EquiLink("https://volvocars.plantview.se/?v=ps&t=p:default,c:projectselector,m:t&ps=ps1&ps1=q:vcg", "fas fa-industry", "Plantview", helperText: "3d scans of all volvo plants")
     </div>
