removed 'kiosk' all chrome now

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -155,7 +155,7 @@
         </p>
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=Tipchanges" class="btn btn-primary btn-sm">Tipchanges/shift &raquo;</a>
+            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=TipChangeDash" class="btn btn-primary btn-sm">Tipchanges/shift &raquo;</a>
             Aantal tipchange per area per shift
         </p>
     </div>
