--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
@@ -7,7 +7,7 @@
 @if (@HttpContext.Current.Session["Impersonating"] != "")
 {
     <div class="label" style="background:black;">
-            <div style="z-index: 2; position: absolute; top: 0px; left: 0px;">
+            <div style="z-index: 2; position: absolute; top: 0px; left: 0px; font-size:xx-small">
                 <div class="badge-pill bg-danger">
                     You are impersonating!
                     @CurrentUser.Getuser.username
