added support for alert

--- a/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
@@ -57,7 +57,7 @@
                 //animation
                 $("#placeholderPartial").html("Loading.....");
                 //load url in placeholder
-                var url = "@Url.Action("_Details")?id=" + data.id;
+                var url = "@Url.Action("_Details")?AddTrendChart=true&id=" + data.id;
                 $("#placeholderPartial").load(url);
             }
         });
