tweeking user screen rendering

--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreens.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreens.cshtml
@@ -1,34 +1,32 @@
 ﻿@model List<EqUiWebUi.Areas.user_management.Models.L_Screens>
 
-<div class="card-body" id="placecontainer" style="position:relative">
+<div class="card-body pt-0 pb-0" id="placecontainer" style="position:relative">
     <div class="row">
-        <div class="col-lg-6">
-            <a href="@Model[0].ScreenUrl"><span class="badge-pill bg-dark">@Model[0].Discription</span></a>
+        <div class="col-lg-6 pl-0 pr-2">
+            <a href="@Model[0].ScreenUrl"><span class="badge-pill bg-warning text-white">@Model[0].Discription</span></a>
             <div class="intrinsic-container intrinsic-container-16x9">
                 <iframe id="frame0" src="@Model[0].ScreenUrl" allowfullscreen frameBorder="0"></iframe>
             </div>
         </div>
 
-        <div class="col-lg-6">
-            <a href="@Model[1].ScreenUrl"><span class="badge-pill bg-dark">@Model[1].Discription</span></a>
+        <div class="col-lg-6 pl-2 pr-0">
+            <a href="@Model[1].ScreenUrl"><span class="badge-pill bg-warning text-white">@Model[1].Discription</span></a>
             <div class="intrinsic-container intrinsic-container-16x9">
                 <iframe id="frame1" src="@Model[1].ScreenUrl" allowfullscreen frameBorder="0"></iframe>
             </div>
         </div>
     </div>
 
-    <p></p>
-
     <div class="row">
-        <div class="col-lg-6">
-            <a href="@Model[2].ScreenUrl"><span class="badge-pill bg-dark">@Model[2].Discription</span></a>
+        <div class="col-lg-6 pl-0 pr-2">
+            <a href="@Model[2].ScreenUrl"><span class="badge-pill bg-warning text-white">@Model[2].Discription</span></a>
             <div class="intrinsic-container intrinsic-container-16x9">
                 <iframe id="frame2" src="@Model[2].ScreenUrl" allowfullscreen frameBorder="0"></iframe>
             </div>
         </div>
 
-        <div class="col-lg-6">
-            <a href="@Model[3].ScreenUrl"><span class="badge-pill bg-dark">@Model[3].Discription</span></a>
+        <div class="col-lg-6 pl-2 pr-0">
+            <a href="@Model[3].ScreenUrl"><span class="badge-pill bg-warning text-white">@Model[3].Discription</span></a>
             <div class="intrinsic-container intrinsic-container-16x9">
                 <iframe id="frame3" src="@Model[3].ScreenUrl" allowfullscreen frameBorder="0"></iframe>
             </div>
@@ -45,8 +43,9 @@
     }
 
     /* 16x9 Aspect Ratio */
+    /*org value 56.26% for 16x9 flow means smaller => value is set so that on a 4X Iiyama screen in fullscreen browser we have NO vertical scroll*/
     .intrinsic-container-16x9 {
-        padding-bottom: 56.25%;
+        padding-bottom: 55%;
     }
 
     /* 4x3 Aspect Ratio */
