--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
@@ -7,7 +7,7 @@
 @if (@HttpContext.Current.Session["Impersonating"] != "")
 {
     <div class="label" style="background:black;">
-            <div style="z-index: 2; position: absolute; top: 0px; left: 0px; font-size:xx-small">
+            <div style="z-index: 2; position: absolute; top: 0px; right: 0px; font-size:x-small">
                 <div class="badge-pill bg-danger">
                     You are impersonating!
                     @CurrentUser.Getuser.username
@@ -18,7 +18,7 @@
 
     <!--page gets renderd in this iframe-->
     <body style="margin:0px;padding:0px">
-        <iframe id="@("IframeScreenID" + Model.id)" src="@Model.ScreenUrl" frameborder="0" style="overflow:hidden;overflow-x:hidden;height:150%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="150%" width="150%"></iframe>
+        <iframe id="@("IframeScreenID" + Model.id)" src="@Model.ScreenUrl" frameborder="0" style="overflow:hidden;overflow-x:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px"></iframe>
     </body>
 
     <!--Modal for messages-->
