--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
@@ -17,8 +17,8 @@
 }
 
     <!--page gets renderd in this iframe-->
-    <body style="margin:0px;padding:0px">
-        <iframe id="@("IframeScreenID" + Model.id)" src="@Model.ScreenUrl" frameborder="0" style="overflow:hidden;overflow-x:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px"></iframe>
+    <body style="margin:0px; padding:0px;">
+        <iframe id="@("IframeScreenID" + Model.id)" src="@Model.ScreenUrl" frameborder="0" style="height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px"></iframe>
     </body>
 
     <!--Modal for messages-->
