fix for using maximo rep db when RT is down

--- a/EqUiWebUi/Views/EQUISetup/_settings.cshtml
+++ b/EqUiWebUi/Views/EQUISetup/_settings.cshtml
@@ -8,7 +8,7 @@
     </div>
     <div class="card-body">
         <p><a href="~/EQUISetup/RunDbTest" class="btn btn-warning btn-sm JQresultTriggerBtn">RunDbTest &raquo;</a>Test all confiured databases</p>
-
+        <p><a href="~/EQUISetup/ChangePWTest" class="btn btn-warning btn-sm JQresultTriggerBtn">ChangePWTest &raquo;</a>Test to change mx pw</p>
         <hr />
         <p><a href="~/c_logclasssystem/Index" class="btn btn-warning btn-sm">LogClassSystems &raquo;</a>Manage classiciation systems</p>
         <p><a href="~/c_LogclassRules/Index" class="btn btn-warning btn-sm">LogClassRules &raquo;</a>Manage how classiciation rules work</p>
