--- a/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionSetup.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionSetup.cshtml
@@ -1,21 +1,25 @@
-﻿@model IEnumerable<EqUiWebUi.Areas.VASC.Models.c_service_setup>
+﻿<div class="card">
+    <div class="card-header">
+        <h5 class="card-title text">Session settings</h5>
+        <div class="text-muted">
+            @Html.ActionLink("Create New parameter", "Create")
+        </div>
+        <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+    </div>
+    <div class="alert-info">
+    </div>
+    <div class="card-body">
+        <div id="sessionSetupGridContainer" class="mvc-grid"></div>
+    </div>
+</div>
 
-@Html.Grid(Model).Named("c_service_setup").Build(columns =>
-{
-    columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
-    columns.Add(c => c._Enable_bit).Titled("enable_mask"); //this is like enable bit
-columns.Add(c => c.name).Titled("name");
-    columns.Add(c => c.value).Titled("value");
-    columns.Add(c => c.description).Titled("description");
-    columns.Add(c => c)
-                    .Titled("")
-                    .Encoded(false)
-                    .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
-                    ).Filterable(false);
-}).Filterable().Sortable().Pageable(pager =>
-{
-    pager.RowsPerPage = 10;
-}).Empty("Did not find anything").Css("table-hover")
 
-<div class="badge">Count: @Model.Count()</div>
-
+<script>
+    $('#sessionSetupGridContainer').mvcgrid({
+        sourceUrl: '@Html.Raw(@Url.Action("_sessionSetupGrid",new { enable_mask = ViewBag.enable_mask }))',
+        requestType: 'get', // Ajax grid request type
+        reloadFailed: function (result) {
+            $("#sessionSetupGridContainer").html("Error while loading!!!");
+        }
+    });
+</script>
