--- a/EqUiWebUi/Areas/VASC/Views/c_service_setup/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_service_setup/Index.cshtml
@@ -57,6 +57,9 @@
                 $("#c_service_setupDetails").load(url2);
             }
         });
+
+        //sim click on first row.
+        $("#c_service_setupSessionsGrid>table>tbody>tr:first").trigger('click');
 </script>
 }
 
