--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -17,7 +17,7 @@
 
     Als de 'maximo' tools in tableau niet automatisch laden.
     Ga naar
-    <a href="https://equi"> https equi &raquo;</a>en klik daar op 'advanced' proceed. (werkt enkel in chrome)
+    <a href="https://gensvw1178.gen.volvocars.net/"> https equi &raquo;</a>en klik daar op 'advanced' proceed. (werkt enkel in chrome)
 
 
 
