Beta Test new supervision

--- a/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Areas.Gadata.SupervisieDummy>
+﻿@model List<EqUiWebUi.Areas.Gadata.SupervisieDummy>
 
 @Html.Grid(Model).Named("Supervisie").Build(columns =>
 {
