--- a/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Areas.Gadata.Models.Supervisie>
+﻿@model IEnumerable<EqUiWebUi.Areas.Gadata.SupervisieDummy>
 
 @*set title*@
 @{
