basic ploeg rapport working

--- a/EqUiWebUi/Areas/Gadata/Views/Table/_ploegRapport.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_ploegRapport.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Areas.Gadata.Models.PloegRaport_Result>
+﻿@model IEnumerable<EqUiWebUi.Areas.Gadata.PloegRaport_dummy>
 
 @Html.Grid(Model).Named("PloegRapport").Build(columns =>
 {
