--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -5,7 +5,7 @@
         <select class="form-control input-sm" id="@id" name="Selecteer locatie">
             <option style="display:none"> -- select a asset root -- </option>
             <option value="">no Filter</option>
-            <option value="U">all assets</option>
+            <option value="U">all known assets</option>
             <optgroup label="Robots">
                 <option value="UR">all robots</option>
                 <option value="URC">comau</option>
