--- a/EqUiWebUi/Areas/Gadata/Views/Table/_ploegRapport.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_ploegRapport.cshtml
@@ -4,8 +4,8 @@
 {
     columns.Add(c => c.Location).Titled("Location").Filterable(true);
     columns.Add(c => c.logtext).Titled("Logtext").Filterable(true).MultiFilterable(true);
-    columns.Add(c => c.Response_min_).Titled("RT").Filterable(true);
-    columns.Add(c => c.Downtime_min_).Titled("DT").Filterable(true);
+    columns.Add(c => c.Response_min_ / 60 ).Titled("RT").Filterable(true);
+    columns.Add(c => c.Downtime_min_ / 60).Titled("DT").Filterable(true);
     columns.Add(c => c.Count).Titled("Count").Filterable(true);
     columns.Add(c => c.timestamp).Formatted("{0:HH:mm:ss}").Titled("Time");
     columns.Add(c => c.Subgroup).Titled("Subgroup").Filterable(true).Css("d-none d-lg-table-cell");
