--- a/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
@@ -16,4 +16,4 @@
 }).Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
-}).Empty("No data found").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleLogtype(row.Logtype))
+}).Empty("No data found").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleLogtype(row.animation))
