--- a/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
@@ -3,9 +3,9 @@
 @Html.Grid(Model).Named("Supervisie").Build(columns =>
 {
     columns.Add(c => c.Location).Titled("Location").Filterable(true);
-    columns.Add(c => c.logtext).Titled("Logtext");
-    columns.Add(c => c.RT / 60).Titled("RT");
-    columns.Add(c => c.DT / 60).Titled("DT");
+    columns.Add(c => c.logtext).Titled("Logtext").Filterable(true);
+    columns.Add(c => c.RT / 60).Titled("RT").Filterable(true);
+    columns.Add(c => c.DT / 60).Titled("DT").Filterable(true);
     columns.Add(c => c.timestamp).Formatted("{0:HH:mm:ss}").Titled("Time");
     columns.Add(c => c.Classification).Titled("Class").Css("d-none d-lg-table-cell");
     columns.Add(c => c.Subgroup).Titled("Subgroup").Css("d-none d-lg-table-cell");
