--- a/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "VASC";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>VASC... If you are not GM or SDB why are you here?</h2>
+<h2>VASC</h2>
 
 
 <div class="card">
@@ -17,10 +17,11 @@
     <div class="card-body">
         <div class="alert alert-danger">
             <strong>Add/Edit service setup</strong>
-            <p>*Here we can setup how different sessions of vasc should run</p>
+            <p>*Here we can setup/view different sessions of vasc</p>
+            <p>*View L_operation log for a session </p>
+            <p>*Change session settings</p>
         </div>
         <p><a href="~/vasc/c_service_setup/index" class="btn btn-danger btn-sm">c_service_setup &raquo;</a></p>
-        <p><a href="~/vasc/service/GetServices" class="btn btn-danger btn-sm">get configured services on server &raquo;</a></p>
         <div class="alert alert-danger">
             <strong>Add/Edit controller class</strong>
             <p>*A controller class set what is done for a certain 'type' of robots</p>
