--- a/EqUiWebUi/Views/EQUISetup/_settings.cshtml
+++ b/EqUiWebUi/Views/EQUISetup/_settings.cshtml
@@ -7,12 +7,16 @@
         </h5>
     </div>
     <div class="card-body">
-        <p><a href="~/EQUISetup/RunDbTest" class="btn btn-warning btn-sm JQresultTriggerBtn">RunDbTest &raquo;</a>Test all confiured databases</p>
-        <p><a href="~/EQUISetup/ChangePWTest" class="btn btn-warning btn-sm JQresultTriggerBtn">ChangePWTest &raquo;</a>Test to change mx pw</p>
+        <h4>Database connections</h4>
+        <p><a href="~/EQUISetup/RunDbTest" class="btn btn-primary btn-sm JQresultTriggerBtn">RunDbTests &raquo;</a>Test all databases in equi.c_datasources (login/select)</p>
         <hr />
+        <h4>Datacollectors</h4>
+        <p><a href="~/vasc/vasc/index" class="btn btn-primary btn-sm">VASC &raquo;</a>Manage VASC (ABB datacollector)</p>
+        <hr />
+        <h4>ClassificationTool</h4>
+        <p><a href="~/Classification/ClassificationTool" class="btn btn-primary btn-sm">LogClassTool &raquo;</a>Tool for classifcation of errors</p>
         <p><a href="~/c_logclasssystem/Index" class="btn btn-warning btn-sm">LogClassSystems &raquo;</a>Manage classiciation systems</p>
-        <p><a href="~/c_LogclassRules/Index" class="btn btn-warning btn-sm">LogClassRules &raquo;</a>Manage how classiciation rules work</p>
-        <p><a href="~/Classification/ClassificationTool" class="btn btn-warning btn-sm">LogClassTool &raquo;</a>Tool for classifcation of errors</p>
+        <p><a href="~/c_LogclassRules/Index" class="btn btn-warning btn-sm">LogClassRules &raquo;</a>Manage classiciation rules</p>
     </div>
 </div>
 
